--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@stripe/stripe-js": "^1.11.0",
     "gatsby": "^2.25.3",
+    "gatsby-plugin-snipcartv3": "^2.3.3",
     "gatsby-source-stripe": "^3.1.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
